--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@popperjs/core": "^2.11.6",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "sass": "^1.56.1",
@@ -17,6 +17,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "perfect-scrollbar": "^1.5.6"
     }
 }
