--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "vite",
         "build": "vite build",
-        "dev": "vite"
-    },
-    "devDependencies": {
-        "@popperjs/core": "^2.11.6",
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.8.2",
-        "bootstrap": "^5.3.4",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "sass": "^1.56.1",
-        "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "development": "mix",
+        "watch": "mix watch"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.7.2",
-        "perfect-scrollbar": "^1.5.6"
+        "@fortawesome/fontawesome-free": "^6.5.1",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.2",
+        "perfect-scrollbar": "^1.5.5",
+        "sweetalert2": "^11.6.13"
+    },
+    "devDependencies": {
+        "axios": "^1.6.4",
+        "laravel-mix": "^6.0.49",
+        "laravel-vite-plugin": "^1.2.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.69.7",
+        "sass-loader": "^12.6.0",
+        "vite": "^5.4.17"
     }
 }
